SERVER-13402 bulk insert can result in too large chunks